add various images in addition to picture page

--- a/travel.html
+++ b/travel.html
@@ -6,11 +6,14 @@
   <body>
     <h1> Making travel arrangements</h1>
 
-    <h2> Because the island is very remote you will need to fly into Main Airport and take a boat shuttle to the resort.
-  Shuttles can be arranged by calling 505-200-0002.</h2>
+    <h3> Because the island is very remote you will need to fly into Main Airport and take a boat shuttle to the resort.
+  Shuttles can be arranged by calling 505/200-0002.</h3>
 
-    <h2> To get around the island it is easiest to hire a pedicab but we also have bicycles and scooters available for rent.
-    Rates vary by season and demand so ask the concierge for current rates upon arrival </h2>
+    <h3> To get around the island it is easiest to hire a pedicab but we also have bicycles and scooters available for rent.
+    Rates vary by season and demand so ask the concierge for current rates upon arrival
+  </h3>
+
+  <p><img src="bike.jpg"></p>
 
 </body>
 
