add css elements and modified private island page

--- a/private-island.html
+++ b/private-island.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/style2.css" rel="stylesheet" type="text/css" media="all">
     <title>Private Island</title>
   </head>
 
   <body>
   <h1>Private Island Resort</h1>
 
-  <h2> Plan the vacation of your dreams</h2>
+  <h2> Plan the vacation of your dreams!</h2>
 
   <p><img src="priv_island_pic.jpg"></p>
 
   <h3> Browse below for information about:</h3>
     <ul>
-      <li> Accommodations </li>
-      <li> Activities</li>
-      <li>Travel Arrangements</li>
-      <li> Virtual Tour and Pictures </li>
+      <li> <a href="file:///Users/Guest/private-island-project/accommodations.html">Accommodations</a></li>
+      <li> <a href="file:///Users/Guest/private-island-project/activities.html">Activities</a></li>
+      <li><a href="file:///Users/Guest/private-island-project/travel.html">Travel Arrangements</a></li>
+      <li> <a href="file:///Users/Guest/private-island-project/pictures.html">Virtual Tour and Pictures </a></li>
 
 </body>
 
